--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
   "name": "intrain",
   "version": "0.0.1",
+  "private": true,
   "description": "Ride in suburban train and listen to the stories related to upcoming station",
-  "main": "index.js",
+  "author": {
+    "name": "x1frm"
+  },
   "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/x1frm/intrain.git"
+  "main": "index.js",
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
   },
-  "author": "x1frm",
-  "license": "ISC",
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "_id": "intrain@0.0.1",
   "bugs": {
     "url": "https://github.com/x1frm/intrain/issues"
   },
-  "homepage": "https://github.com/x1frm/intrain#readme"
+  "homepage": "https://github.com/x1frm/intrain#readme",
+  "license": "ISC",
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/x1frm/intrain.git"
+  }
 }
