--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "smoothscroll-polyfill": "^0.4.4",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
